# composite-resolve

./: LICENSE  README.md  pyproject.toml
composite_resolve/: __init__.py  _classify.py  _compat.py  _core.py  _errors.py  _limit.py  _taylor.py  _verify.py  math.py
composite_resolve/tests/: test_classify.py  test_error_handling.py  test_errors.py  test_integration_e2e.py  test_limit_basic.py  test_limit_higher_order.py  test_limit_indeterminate.py  test_limit_infinity.py  test_limit_onesided.py  test_patching.py  test_precision.py  test_real_world.py  test_resolve_basic.py  test_safe.py  test_stress.py  test_symbolic_limits.py  test_taylor.py  test_undecidable.py  test_unsupported.py  test_verify.py  test_zero_semantics.py
docs/: api.md  limitations.md
